--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "outDir": "dist"
   },
-  "exclude": ["/node_modules"]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
