--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "npm run serve",
-    "serve": "node dist/index.js"
+    "deploy": "node dist/index.js"
   },
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
