--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
     "@types/node": "^13.9.3",
-    "discord.js": "11.5.1",
+    "discord.js": "^12.0.2",
     "dotenv": "^8.2.0",
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.24.0",
     "typescript": "^3.8.3",
-    "ytdl-core-discord": "^1.1.0",
-    "yt-search": "^1.1.2"
+    "yt-search": "^1.1.2",
+    "ytdl-core-discord": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
