Adding ec2 deploy process

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "deploy": "node dist/index.js"
+    "deploy": "node dist/index.js",
+    "deploy:ec2": "npm run build && pm2 start ./dist/index.js --name conure-bot"
   },
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
