--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ffmpeg": "0.0.4",
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.24.0",
-    "opusscript": "^0.0.7",
+    "opusscript": "0.0.7",
     "typescript": "^3.8.3",
     "yt-search": "^1.1.2",
     "ytdl-core-discord": "^1.1.0"
