--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "fluent-ffmpeg": "^2.1.2",
     "moment": "^2.24.0",
     "opusscript": "0.0.7",
+    "twitch": "^4.0.10",
+    "twitch-webhooks": "^4.0.10",
     "typescript": "^3.8.3",
     "yt-search": "^1.1.2",
     "ytdl-core-discord": "^1.1.0"
