--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,5 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout project
+        uses: actions/checkout@v3
       - name: TypeScript Build
         uses: alexthemaster/action-build-typescript@v1.3.1
